--- a/furama-web/src/app/layout/admin/admin-content-layout/admin-content-layout.component.html
+++ b/furama-web/src/app/layout/admin/admin-content-layout/admin-content-layout.component.html
@@ -1,1 +1,164 @@
-<p>admin-content-layout works!</p>
+<div class="loading" *ngIf="loading">
+  Loading
+</div>
+<div class="page-container">
+  <div class="page-sidebar">
+    <a class="logo" href="#">Codegym</a>
+    <ul class="list-unstyled accordion-menu">
+      <li>
+        <a href="#" class="active"><i data-feather="activity"></i>Dashboard</a>
+      </li>
+      <li class="active-page">
+        <a href="#"><i data-feather="aperture"></i>Customer<i
+          class="fas fa-chevron-right dropdown-icon"></i></a>
+        <ul class="">
+          <li><a href="#" class="active"><i class="far fa-circle"></i>Customer</a></li>
+          <li><a href="#"><i class="far fa-circle"></i>Customer Type</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#"><i data-feather="aperture"></i>Employee<i
+          class="fas fa-chevron-right dropdown-icon"></i></a>
+        <ul class="">
+          <li><a href="#" class="active"><i class="far fa-circle"></i>Employee</a></li>
+          <li><a href="#"><i class="far fa-circle"></i>Position</a></li>
+          <li><a href="#"><i class="far fa-circle"></i>Degree</a></li>
+          <li><a href="#"><i class="far fa-circle"></i>Division</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#"><i data-feather="box"></i>Contract</a>
+      </li>
+      <li>
+        <a href="#"><i data-feather="star"></i>Service</a>
+      </li>
+      <li>
+        <a href="#"><i data-feather="droplet"></i>Attach Service</a>
+      </li>
+      <li>
+        <a href="#"><i data-feather="grid"></i>Service Type</a>
+      </li>
+      <li>
+        <a href="charts.html"><i data-feather="pie-chart"></i>Rent Type</a>
+      </li>
+
+    </ul>
+    <a href="#" id="sidebar-collapsed-toggle"><i data-feather="arrow-right"></i></a>
+  </div>
+  <div class="page-content">
+    <div class="page-header">
+      <nav class="navbar navbar-expand-lg d-flex justify-content-between">
+        <div class="header-title flex-fill">
+          <a href="#" id="sidebar-toggle"><i data-feather="arrow-left"></i></a>
+          <h5>Dashboard</h5>
+        </div>
+        <div class="flex-fill" id="headerNav">
+          <ul class="navbar-nav">
+            <li class="nav-item d-md-block d-lg-none">
+              <a class="nav-link" href="#" id="toggle-search"><i data-feather="search"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link activity-trigger" href="#" id="activity-sidebar-toggle"><i
+                data-feather="grid"></i></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link notifications-dropdown" href="#" id="notificationsDropDown" role="button"
+                 data-bs-toggle="dropdown" aria-expanded="false">2
+                <div class="spinner-grow text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </a>
+              <div class="dropdown-menu dropdown-menu-end notif-drop-menu"
+                   aria-labelledby="notificationsDropDown">
+                <h6 class="dropdown-header">Notifications</h6>
+                <a href="#">
+                  <div class="header-notif">
+                    <div class="notif-image">
+                                    <span class="notification-badge bg-info text-white">
+                                      <i class="fas fa-bullhorn"></i>
+                                    </span>
+                    </div>
+                    <div class="notif-text">
+                      <p class="bold-notif-text">notification 1</p>
+                      <small>19:00</small>
+                    </div>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="header-notif">
+                    <div class="notif-image">
+                                    <span class="notification-badge">
+                                      <img src="img\avatar.png">
+                                    </span>
+                    </div>
+                    <div class="notif-text">
+                      <p>notification 2</p>
+                      <small>yesterday</small>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link profile-dropdown" href="#" id="profileDropDown" role="button"
+                 data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="img\avatar.png">
+              </a>
+              <div class="dropdown-menu dropdown-menu-end profile-drop-menu"
+                   aria-labelledby="profileDropDown">
+                <a class="dropdown-item" href="#"><i data-feather="user"></i>Profile</a>
+                <a class="dropdown-item" href="#"><i data-feather="inbox"></i>Messages</a>
+                <a class="dropdown-item" href="#"><i data-feather="edit"></i>Activities<span
+                  class="badge rounded-pill bg-success">12</span></a>
+                <a class="dropdown-item" href="#"><i data-feather="check-circle"></i>Tasks</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#"><i data-feather="settings"></i>Settings</a>
+                <a class="dropdown-item" href="#"><i data-feather="unlock"></i>Lock</a>
+                <a class="dropdown-item" href="#"><i data-feather="log-out"></i>Logout</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+
+  <div class="activity-sidebar-overlay"></div>
+  <div class="activity-sidebar">
+    <a href="#" id="activity-sidebar-close"><i class="material-icons">close</i></a>
+    <div class="activity-header">
+      <h5>Activity Logs</h5>
+    </div>
+    <div class="activity-body">
+      <ul class="activity-list list-unstyled">
+        <li class="activity-item">
+          <div class="activity-icon"><i class="material-icons">add</i></div>
+          <div class="activity-text">Ann Green uploaded new item
+            <span>This item has to be reviewed, moderators will check it soon.</span>
+          </div>
+          <div class="activity-helper">45min ago</div>
+        </li>
+        <li class="activity-item activity-info">
+          <div class="activity-icon"><i class="material-icons">code</i></div>
+          <div class="activity-text">John Doe made changes to create-invoice.js
+            <span>57 lines of code added, 0 removals, 0 errors, 6 warnings</span>
+          </div>
+          <div class="activity-helper">3h ago</div>
+        </li>
+        <li class="activity-item activity-danger">
+          <div class="activity-icon"><i class="material-icons">error_outline</i></div>
+          <div class="activity-text">Can't retrieve data from server
+            <span>Server is not responding, please contact provider</span>
+          </div>
+          <div class="activity-helper">6h ago</div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<script type="text/javascript">
+  $(".date").datepicker({
+    dateFormat: "yy-mm-dd",
+  });
+</script>
