--- a/furama-web/src/app/layout/admin/admin-content-layout/admin-content-layout.component.html
+++ b/furama-web/src/app/layout/admin/admin-content-layout/admin-content-layout.component.html
@@ -88,7 +88,7 @@
                     <div class="header-notif">
                       <div class="notif-image">
                                     <span class="notification-badge">
-                                      <img src="img\avatar.png">
+                                      <img src="assets\manager\img\avatar.png">
                                     </span>
                       </div>
                       <div class="notif-text">
@@ -102,7 +102,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link profile-dropdown" href="#" id="profileDropDown" role="button"
                    data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="img\avatar.png">
+                  <img src="assets\manager\img\avatar.png">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end profile-drop-menu"
                      aria-labelledby="profileDropDown">
